user avatar dropdown left shift on iPad Pro landscape fix

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -420,6 +420,16 @@ ev-avatar img {
   }
 }
 
+@media (height: 1024px) and (width: 1366px) {
+  .avatar-container {
+
+    img {
+      margin-top: 0vh !important;
+
+    }
+  }
+}
+
 @media (min-width: 1500px) {
   .avatar-container {
   
@@ -591,6 +601,15 @@ input {
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 100%;
+}
+
+@media (height: 1024px) and (width: 1366px) {
+  .dropdown-content_user {
+    margin-left: -220% !important;
+  }
+  .avatar-container {
+    margin-top: 0vh !important;
+  }
 }
 
 
